--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,19 @@
+<style>
+    header {
+        background-color: #ef952b;
+        display: flex;
+        border-bottom: 3px solid #000;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    h1 {
+        text-shadow: 1px 1px #fff;
+    }
+    header>* {
+        margin: 0 1em;
+    }
+</style>
+
 <header>
     <img src="assets/images/icons/seed-icon.png" alt="">
     <h1>Welcome to Angular Seed!</h1>
