--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div>
     <app-header></app-header>
-    <p>The app is working!</p>
+    <app-child></app-child>
+     <app-form-input icon="envelope">
+         <small>Business email</small>
+         <label for="emailAddress">Email:</label>
+         <input id="emailAddress" type="email">
+     </app-form-input>
     <app-child></app-child>
 </div>
+
