--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
     <img src="assets/images/icons/seed-icon.png" alt="">
-    <h1>Welcome to Angular Seed, {{ userName }}!</h1>
+    <h1>{{ title }}, {{ userName }}!</h1>
 </header>
