use Input to share data from parent to child component - guided exercise 20

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-header></app-header>
+    <app-header [user]="user"></app-header>
     <app-child></app-child>
      <app-form-input icon="envelope">
          <small>Business email</small>
