--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
     <img src="assets/images/icons/seed-icon.png" alt="">
-    <h1>{{ title }}, {{ userName }}!</h1>
+    <h1>Welcome {{(user.registered) ? 'back' : ''}} to Angular Seed{{(user.registered) ? ", " + user.name : ''}}!</h1>
 </header>
