--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-header [user]="user"></app-header>
-    <app-child></app-child>
+    <p>Logged In: {{ loggedIn }}</p>
+    <app-child (login)="logIn($event)"></app-child>
      <app-form-input icon="envelope">
          <small>Business email</small>
          <label for="emailAddress">Email:</label>
