understanding the @ViewChild decorator - guided exercise 22

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,1 +1,3 @@
 <p (click)="loginOutput(true)">Output Login Status</p>
+<!--<input type="text" (change)="true" #templateVar>
+{{templateVar.value}}-->
