--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div>
     <app-header [user]="user"></app-header>
+    <button (click)="addFruit()">Add a serving of fruit</button>
+    <h2>Fruit Counter: <span #fruit></span></h2>
     <p>Logged In: {{ loggedIn }}</p>
     <app-child (login)="logIn($event)"></app-child>
-     <app-form-input icon="envelope">
+     <!--<app-form-input icon="envelope">
          <small>Business email</small>
          <label for="emailAddress">Email:</label>
          <input id="emailAddress" type="email">
-     </app-form-input>
-    <app-child></app-child>
+     </app-form-input>-->
 </div>
 
