create a custom directive and dynamically insert a component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
     <app-header [user]="user"></app-header>
+    <img status="You need to eat two more servings of fruit" src="assets/images/foodImages/apple.png">
     <section *ngIf="!user.registered">
         <img src="../assets/images/plateImages/chooseMyPlate.gov.png">
     </section>
