understanding template-driven forms and formControls - guided exercise 31

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-header [user]="user"></app-header>
-    <img status="You need to eat two more servings of fruit" src="assets/images/foodImages/apple.png">
+    <app-login></app-login>
+   <!-- <img status="You need to eat two more servings of fruit" src="assets/images/foodImages/apple.png">
     <section *ngIf="!user.registered">
         <img src="../assets/images/plateImages/chooseMyPlate.gov.png">
     </section>
@@ -13,7 +14,7 @@
         <span *ngSwitchCase="false" class="notRegistered">{{ loggedIn }}</span>
         <span *ngSwitchCase="true">{{ loggedIn }}</span>
     </p>
-    <app-child (login)="logIn($event)"></app-child>
+    <app-child (login)="logIn($event)"></app-child>-->
      <!--<app-form-input icon="envelope">
          <small>Business email</small>
          <label for="emailAddress">Email:</label>
