convert the template-driven form to a reactive form - practice exercise 8

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,28 @@
-<form #userNameForm="ngForm"
+<!--template-driven form-->
+<!--<form #userNameForm="ngForm"
       (ngSubmit)="onSubmit(userNameForm.value)">
     <label for="userName">User Name</label>
     <input type="text"
            id="userName"
            name="userName"
            [(ngModel)]="userName">
-    <button type="submit">Submit</button>
-    <button type="button" (click)="log(userNameForm)">Access Form Properties with ngForm</button>
-    <h1>Hi {{ userName }}</h1>
+    <button type="submit">Submit Template-Driven Form</button>
+    <button (click)="log(userNameForm)">Log Template Form Properties with ngForm</button>
 </form>
+<h1>Hi {{ userName }}</h1>-->
+
+<!--Reactive Form-->
+<form [formGroup]="nameForm"
+      (ngSubmit)="onSubmit(nameForm.value)">
+    <label for="userName">User Name</label>
+    <input type="text"
+           id="userName"
+           name="userName"
+           formControlName="userName">
+    <button type="submit">Submit Reactive Form</button>
+
+    <button (click)="log(nameForm)">Access Reactive Form Properties with ngForm</button>
+</form>
+<h1>Hi {{ userName.value }}</h1>
+
+
