using a built-in pipe - guided exercise 47

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,3 +1,4 @@
 <p (click)="loginOutput(true)">Output Login Status</p>
+<p>Today's Plate: {{ todaysPlate | date | uppercase }}</p>
 <!--<input type="text" (change)="true" #templateVar>
 {{templateVar.value}}-->
