--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-header [user]="user"></app-header>
-    <app-login></app-login>
+    <app-child></app-child>
+<!--    <app-login></app-login>-->
    <!-- <img status="You need to eat two more servings of fruit" src="assets/images/foodImages/apple.png">
     <section *ngIf="!user.registered">
         <img src="../assets/images/plateImages/chooseMyPlate.gov.png">
